2007-02-26  Paul J Stevens <paul@nfg.nl>

	* modules/Makefile.am, modules/Makefile.in:
	do not build empty so files (closes: #510)
	* dbmail.conf:
	replace tabs with spaces (closes: #509)
	* export.c:
	append .mbox to mailbox-name during export
	* pop3.c:
	issue +OK after QUIT (closes: #513)

2007-02-08  Paul J Stevens <paul@nfg.nl>

	* db.c:
	fix bogus return value
	* dbmail-mailbox.c, dbmail-mailbox.h, dbmailtypes.h:
	refactor uid/msn mapper
	* dbmail-mailbox.c:
	use outlook quirk
	* dm_imaputil.c, dm_imaputil.h, imapcommands.c:
	cleanups
	* check_dbmail_imapd.c, db.c, db.h, dbmail-imapsession.c, 
	dbmail-imapsession.h, imapcommands.c, test-scripts/testimap.py:
	refactor _ic_copy and _ic_store

2007-02-06  Paul J Stevens <paul@nfg.nl>

	* dbmail-message.c:
	headernames in cache must be case-insentitive

2007-02-05  Aaron Stone  <aaron@serendipity.cx>

	* db.c:
	Strip namespace off of mailbox searches (closes bug #474).

2007-02-03  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_user.c, dbmail-user.c, dbmail-user.h:
	removing is_valid test. Validating usernames is deferred to the storage
	layer (closes #490)

2007-01-31  Paul J Stevens <paul@nfg.nl>

	* debian/rules:
	remove --libdir from debian configure run
	* dbmail-message.c, misc.c, misc.h:
	convert 8bit header values to utf8 during insertion (AntonZ)

2007-01-30  Paul J Stevens <paul@nfg.nl>

	* misc.c:
	only encode subjectvalues in the envelope response if the subject is
	both 8bit and utf8 clean
	* dbmail-imapsession.c:
	remove the Recent flag from the PERMANENTFLAGS response
	* test-scripts/testbox:
	add bogus 8bit message to testbox

2007-01-24  Paul J Stevens <paul@nfg.nl>

	* README:
	minor update
	* Makefile.in, configure, man/Makefile.in, misc.c, modules/Makefile.in:
	do rfc2047 encoding of 8bit subjects during envelope construction

2007-01-23  Paul J Stevens <paul@nfg.nl>

	* Makefile.in, check_dbmail.h, check_dbmail_imapd.c, misc.c, 
	  modules/Makefile.in, test-scripts/testimap.py: