@@ -1,3 +1,9 @@
+2007-02-27  Aaron Stone  <aaron@serendipity.cx>
+
+	* user.c, dbmail-user.c:
+	Enable use of -y/-n to protect against doing anything unintended
+	and irreversible without explicitly authorizing the changes.
+
 2007-02-26  Paul J Stevens <paul@nfg.nl>
 
 	* modules/Makefile.am, modules/Makefile.in:
